overflow in about fix

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,4 +1,19 @@
+.aboutWrapper {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
 .about {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.container {
   padding: 150px 15vw 200px;
   color: white;
 }
